<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ipgwclient</string>
    <string name="title">北京大学网关认证</string>
    <string name="uid">用户名：</string>
    <string name="password">密&#x0020;&#x0020;&#x0020;&#x0020;码：</string>
    <string name="uidHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="range">访问范围：</string>
    <string name="rangeFree">免费</string>
    <string name="rangeGlobal">收费</string>
    <string name="saveUid">保存账号</string>
    <string name="savePwd">保存密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="disconnectAll">断开所有连接</string>
    <string name="action_settings">Settings</string>

</resources>
